--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^0.25.0",
     "geist": "^1.5.1",
+    "jose": "^6.1.1",
     "lucide-react": "^0.553.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
